Z-index maior para o menu (fixes #111)

--- a/src/wp-content/themes/timtec/assets/styles/layouts/_header.scss
+++ b/src/wp-content/themes/timtec/assets/styles/layouts/_header.scss
@@ -17,6 +17,7 @@
     background: -moz-linear-gradient(top,#007dc3,#1451a2);
     background: -ms-linear-gradient(top,#007dc3,#1451a2);
     background: -o-linear-gradient(top,#007dc3,#1451a2);
+    z-index: 9999;
     
     .navbar-header{
         width:40%;
